lab8 done